# rosarm

./: README.md  demo.py  main.py  quick_start.sh  requirements.txt  robot_arm_gui.py  robot_gui.py  start.sh
src/arm_3d_control/: CMakeLists.txt  README.md  package.xml
src/arm_3d_control/launch/: arm_3d_control.launch
src/arm_3d_control/src/: arm_3d_control_node.cpp  position_sender_example.cpp
src/arm_bringup/: CMakeLists.txt  package.xml  resource_monitor.py
src/arm_bringup/config/: arm.rviz  hardware_config.yaml
src/arm_bringup/launch/: arm_control.launch.py  arm_system.launch
src/arm_bringup/rviz/: arm_system.rviz
src/arm_gui/: CMakeLists.txt  package.xml
src/arm_gui/launch/: arm_gui.launch
src/arm_gui/src/: arm_control_gui.cpp  arm_gui.cpp  arm_gui_node.cpp  enhanced_arm_gui.cpp  enhanced_arm_gui_node.cpp  joint_state_publisher_node.cpp  main.cpp  main_window.cpp  scene_3d_renderer.cpp
src/arm_gui/ui/: arm_control_main.ui
src/arm_trajectory/: CMakeLists.txt  package.xml  setup.py
src/arm_trajectory/config/: rosconsole.conf
src/arm_trajectory/docs/: 相机使用说明.md
src/arm_trajectory/launch/: arm_control.launch  mock_camera.launch  stereo_camera.launch  stereo_camera_highres.launch  visual_servo.launch
src/arm_trajectory/msg/: TrajectoryPath.msg  TrajectoryPoint.msg
src/arm_trajectory/scripts/: __init__.py  check_camera.py  kinematics_control.py  kinematics_node.py  path_planner.py  path_planner_control.py  path_planner_node.py  resource_monitor.py  stereo_camera_node.py  trajectory_bridge_node.py  trajectory_control.py  trajectory_node.py  vision_arm_bridge.py  visual_servo_control.py  visual_servo_controller.py  visual_servo_node.py  whales_optimizer.py  yolo_detector.py
src/arm_trajectory/src/: kinematics_control.cpp  kinematics_node.cpp  kinematics_service.cpp  kinematics_utils.cpp
src/arm_trajectory/srv/: ForwardKinematics.srv  InverseKinematics.srv  PlanTrajectory.srv
src/gui/: CMakeLists.txt  package.xml  setup.py
src/gui/include/: main_window.h
src/gui/launch/: arm_control_nogui.launch  arm_gui.launch  gui.launch.py  joint_state_publisher.launch
src/gui/resources/: resources.qrc
src/gui/rviz/: arm_vision.rviz
src/gui/scripts/: joint_state_publisher.py  test_tkinter.py  tkgui_main.py
src/gui/src/: control_panel.cpp  joint_state_publisher.cpp  joint_state_publisher_node.cpp  main.cpp  main_window.cpp  main_window_node.cpp
src/gui/ui/: arm_control_main.ui
src/motor/: CMakeLists.txt  package.xml
src/motor/config/: motor_config.yaml
src/motor/include/: v8stdint.h
src/motor/launch/: arm_control.launch  motor_control.launch.bak  motor_control.launch.py
src/motor/msg/: MotorOrder.msg
src/motor/src/: main.cpp  motor_control.cpp  motor_node.cpp
src/motor/srv/: MotorControl.srv
src/serial/: CMakeLists.txt  package.xml
src/servo/: CMakeLists.txt  Makefile  cmake_install.cmake  package.xml
src/servo/atomic_configure/: .rosinstall.X3ly6
src/servo/catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  servo_wrist-msg-extras.cmake.develspace.in
src/servo/cmake/: servo_wrist-genmsg-context.py
src/servo/launch/: arm_control.launch  servo_control.launch  servo_nodes.launch.py  vacuum_control.launch
src/servo/msg/: SerControl.msg
src/servo/src/: arm_control.cpp  arm_node.cpp  feetech_adapter.cpp  motor_control.cpp  motor_node.cpp  serial_example.cpp  serial_mock.cpp  servo_control.cpp  servo_example.cpp  servo_mock.cpp  standalone_example.cpp  standalone_servo_control.cpp  vacuum_control.cpp  vacuum_node.cpp  vacuum_node_main.cpp  wrist_control.cpp  wrist_node.cpp  wrist_node_main.cpp
src/servo/srv/: HomePosition.srv  JointControl.srv  MotorControl.srv
src/servo_interfaces/: CMakeLists.txt  package.xml
src/servo_interfaces/msg/: SerControl.msg
src/servo_interfaces/srv/: VacuumCmd.srv
src/servo_wrist/: CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  package.xml  servo_wrist_ros.md
src/servo_wrist/atomic_configure/: local_setup.fish.NBUgj  local_setup.sh.5DdbW  setup.sh.UA37x
src/servo_wrist/build_c/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/servo_wrist/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  setup_cached.sh
src/servo_wrist/cmake/: servo_wrist-genmsg-context.py  servo_wrist-genmsg.cmake
src/servo_wrist/devel/: .catkin  setup.fish
src/servo_wrist/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/servo_wrist/msg/: SerControl.msg
src/servo_wrist/src/: arm_control.cpp  arm_controller.cpp  arm_node.cpp  servo_1000000_control.cpp  servo_wrist_node.cpp  vacuum_control.cpp  vacuum_controller.cpp  vacuum_node.cpp  wrist_control.cpp  wrist_ctrl.cpp  wrist_node.cpp  wrist_node_main.cpp
src/servo_wrist/srv/: HomePosition.srv  JointControl.srv  VacuumControl.srv
src/stereo_vision/: CMakeLists.txt  README.md  package.xml
src/stereo_vision/launch/: depth_visualization.launch  integrated_arm_vision.launch  object_detection.launch  object_detection_minimal.launch  stereo_arm_control.launch  stereo_cameras.launch  stereo_vision.launch  stereo_vision_minimal.launch  test_stereo_detection.launch
src/stereo_vision/msg/: DetectionArray.msg
src/stereo_vision/rviz/: stereo_arm_control.rviz
src/stereo_vision/scripts/: camera_config.py  camera_config_ros.py  camera_direct.py  camera_node.py  camera_test.py  depth_estimator.py  install_yolov8.sh  stereo_camera.py  stereo_detection_node.py  stereo_merger.py  stereo_splitter.py  switch_view.py  test_depth_view.py  test_gui_service.py  test_view_modes.py  view_mode_switcher.py  yolo_controller.py  yolo_detector.py
src/stereo_vision/src/: stereo_vision_node.cpp  vision_processor.cpp
src/stereo_vision/srv/: DetectionControl.srv  SetViewMode.srv
src/trajectory/: CMakeLists.txt  package.xml  path_planner_node.py  setup.py  trajectory_node.py  whales_optimizer.py
src/trajectory/config/: arm_params.yaml  rosconsole.conf
src/vision/: CMakeLists.txt  package.xml  setup.py
(+517 files in other folders)
