<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_bringup</name>
  <version>0.0.1</version>
  <description>Launch files for the robotic arm</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>motor</exec_depend>
  <exec_depend>servo</exec_depend>
  <exec_depend>trajectory</exec_depend>
  <exec_depend>vision</exec_depend>
  <exec_depend>gui</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
