<?xml version="1.0"?>
<package format="2">
  <name>arm_gui</name>
  <version>0.0.1</version>
  <description>GUI interface for robotic arm control</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>arm_trajectory</build_depend>
  <build_depend>servo_wrist</build_depend>
  <build_depend>stereo_vision</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>arm_trajectory</exec_depend>
  <exec_depend>servo_wrist</exec_depend>
  <exec_depend>stereo_vision</exec_depend>

  <export>
  </export>
</package>
