<?xml version="1.0"?>
<package format="2">
  <name>arm_trajectory</name>
  <version>0.0.1</version>
  <description>The arm_trajectory package for robot arm trajectory planning</description>

  <maintainer email="user@example.com">Your Name</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>qt5-qmake</build_depend>
  <build_depend>libqt5-core</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-scipy</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>eigen_conversions</build_export_depend>
  <build_export_depend>tf2_eigen</build_export_depend>
</package> 